mariadb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        kubernetes.io/hostname: 'oracle-paris'
      containers:
        - name: mariadb
          image: mariadb
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb
      volumes:
        - name: mariadb
          hostPath:
            path: /mnt/wiki-data/mariadb
---
kind: Service
apiVersion: v1
metadata:
  name: mariadb-service
  namespace: wiki
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      name: main
  type: ClusterIP
