postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeSelector:
        kubernetes.io/hostname: 'oracle-paris'
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          hostPath:
            path: /mnt/wiki-data/postgres
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: wiki
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      name: main
  type: ClusterIP
